Добавлена форма обратной связи "Заказать звонок" и страница оповещения пользователя. Добавлена и сверстана страница "Контакты". Интерфейс переведен на русский язык. Изменены верстка и содержание шапки и футера.

--- a/static/css/shop-homepage.css
+++ b/static/css/shop-homepage.css
@@ -6,6 +6,7 @@
 
 body {
     padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+    /*font-size: 20px;*/
 }
 
 .slide-image {
@@ -51,4 +52,27 @@ body {
 
 footer {
     margin: 50px 0;
+}
+
+.contacts, .requestCallResult {
+    margin-top: 40px;
+    font-size: 18px;
+    font-family: "Comic Sans MS", serif;
+}
+
+.contacts table {
+    border-collapse: collapse;
+}
+
+caption {
+    font-size: 20px;
+}
+
+th, td {
+    border-bottom: 1px solid #cecfd5;
+    padding: 10px 15px;
+}
+
+tr:last-child td {
+    border-bottom: 0;
 }
