--- a/views/locations.html
+++ b/views/locations.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
 
-    <title>MongoMart - Locations</title>
+    <title>Детские праздники</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
@@ -39,8 +39,8 @@
     <div class="row">
         <div class="col-md-12">
             <ol class="breadcrumb">
-                <li><a href="/">Home</a></li>
-                <li>Locations</li>
+                <li><a href="/">Главная</a></li>
+                <!--<li>Locations</li>-->
             </ol>
         </div>
     </div>
