--- a/views/cart.html
+++ b/views/cart.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
 
-    <title>Your Cart - MongoMart</title>
+    <title>Список персонажей - Детские праздники</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
@@ -36,15 +36,15 @@
     <div class="row">
         <div class="col-md-12">
             <ol class="breadcrumb">
-                <li><a href="/">Home</a></li>
-                <li class="active">Cart</li>
+                <li><a href="/">Главная</a></li>
+                <li class="active">Список персонажей</li>
             </ol>
         </div>
     </div>
 
     {% if updated %}
         <p class="bg-warning" style="padding: 15px; font-size: 14px;">
-            Your cart has been successfully updated.
+            Ваш список персонажей успешно обновлен.
         </p>
     {% endif %}
 
@@ -53,8 +53,8 @@
             <table class="table table-bordered table-striped">
                 <thead>
                 <tr>
-                    <th>Product Name</th>
-                    <th>Image</th>
+                    <th>Имя персонажа</th>
+                    <th>Фото</th>
                     <th>Quantity</th>
                     <th>Unit Price</th>
                     <th>Total</th>
