--- a/views/includes/footer.html
+++ b/views/includes/footer.html
@@ -7,7 +7,7 @@
     <footer>
         <div class="row">
             <div class="col-lg-12">
-                <p>Copyright &copy; MongoMart 2015 - 2016</p>
+                <p style="font-family: 'Comic Sans MS',serif">Агентство по организации досуга "Детские прзадники" &copy; 2012-2016</p>
             </div>
         </div>
     </footer>
