--- a/views/includes/nav.html
+++ b/views/includes/nav.html
@@ -9,30 +9,30 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/" style="color: #fff;">MongoMart</a>
+            <a class="navbar-brand" href="/" style="color: #337ab7;">Детские праздники</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li>
-                    <a href="#">Log In</a>
+                    <a href="/contacts">Контакты </a>
                 </li>
-                <li>
+                <!--<li>
                     <a href="#">Locations</a>
-                </li>
-                <li>
+                </li>-->
+                <!--<li>
                     <a href="#"><strong>Admin Panel</strong></a>
-                </li>
+                </li>-->
             </ul>
             <div class="collapse navbar-collapse">
                 <form class="navbar-form navbar-right" role="search" action="/search">
                     <div class="form-group">
-                        <input type="text" class="form-control" name="query" placeholder="Search">
+                        <input type="text" class="form-control" name="query" placeholder="Персонаж">
                     </div>
-                    <button type="submit" class="btn btn-default">Submit</button>
-                    <a href="/cart">
+                    <button type="submit" class="btn btn-default">Поиск</button>
+                    <a href="/requestCall">
                         <button type="button" class="btn btn-success">
-                            <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> Cart
+                            <!--<span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>--> Заказать звонок
                         </button>
                     </a>
                 </form>
