--- a/views/search.html
+++ b/views/search.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="/static/img/favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="/static/img/favicon.ico" type="image/x-icon" />
 
-    <title>MongoMart - Shop MongoDB Gear</title>
+    <title>Поиск персонажа - Детские праздники</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
@@ -38,8 +38,8 @@
     <div class="row">
         <div class="col-md-12">
             <ol class="breadcrumb">
-                <li><a href="/">Home</a></li>
-                <li>Search</li>
+                <li><a href="/">Главная</a></li>
+                <li>Поиск</li>
                 <li class="active">"{{queryString}}"</li>
             </ol>
         </div>
@@ -65,7 +65,7 @@
                         <h3><a href="/item/{{item._id}}">{{item.title}}</a></h3>
                         <h4>{{item.slogan}}</h4>
                         <p>{{item.description}}</p>
-                        <a class="btn btn-primary" href="/item/{{item._id}}">View Product <span class="glyphicon glyphicon-chevron-right"></span></a>
+                        <a class="btn btn-primary" href="/item/{{item._id}}">Просмотр персонажа <span class="glyphicon glyphicon-chevron-right"></span></a>
                     </div>
                 </div>
                 <!-- /.row -->
@@ -91,7 +91,7 @@
             </div>
 
             <div style="text-align:center;">
-                <i>{{itemCount}} Products</i>
+                <i>{{itemCount}} персонажей</i>
             </div>
 
             <!-- /.row -->
