Добавлена заготовка страницы "Цены на услуги". Исправлено отображение иконки на некоторых страницах.

--- a/views/includes/nav.html
+++ b/views/includes/nav.html
@@ -9,7 +9,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/" style="color: #337ab7;">Детские праздники</a>
+            <a class="navbar-brand" href="/">Детские праздники</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -17,9 +17,9 @@
                 <li>
                     <a href="/contacts">Контакты </a>
                 </li>
-                <!--<li>
-                    <a href="#">Locations</a>
-                </li>-->
+                <li>
+                    <a href="/price">Цены на услуги</a>
+                </li>
                 <!--<li>
                     <a href="#"><strong>Admin Panel</strong></a>
                 </li>-->
