--- a/views/price.html
+++ b/views/price.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
 
@@ -11,7 +11,7 @@
     <link rel="icon" href="/static/img/favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="/static/img/favicon.ico" type="image/x-icon" />
 
-    <title>Детские праздники - Контакты</title>
+    <title>Детские праздники - Цены на услуги</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
@@ -29,40 +29,28 @@
 </head>
 
 <body>
-
 {% include "includes/nav.html" %}
+
 
 <!-- Page Content -->
 <div class="container">
+
     <div class="row">
         <div class="col-md-12">
             <ol class="breadcrumb">
                 <li><a href="/">Главная</a></li>
-                <li><a href="price">Цены на услуги</a></li>
+                <li><a href="contacts">Контакты</a></li>
             </ol>
         </div>
     </div>
     <!-- /.row -->
 
-    <div class="contacts">
-        <table>
-            <caption>Мы всегда на связи</caption>
-            <tr>
-                <td>Позвоните нам по телефону</td>
-                <td>8 (912) 638-37-97</td>
-            </tr>
-            <tr>
-                <td>Напишите нам по адресу</td>
-                <td>nataliburt@gmail.com</td>
-            </tr>
-        </table>
-    </div>
+
 
 </div>
 <!-- /.container -->
 
 {% include "includes/footer.html" %}
-
 </body>
 
 </html>
