--- a/views/item.html
+++ b/views/item.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
-    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/static/img/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/static/img/favicon.ico" type="image/x-icon" />
     
     <title>{{item.title}} - Детские праздники</title>
     
@@ -80,7 +80,7 @@
             </div>
             
             <p>
-              {{item.description}}
+              {{ item.description | safe }}
             </p>
             
             <!--<form action="/user/{{userId}}/cart/items/{{item._id}}" role="form" method="post">
