--- a/views/contacts.html
+++ b/views/contacts.html
@@ -43,21 +43,19 @@
         </div>
     </div>
     <!-- /.row -->
-
-    <div class="contacts">
-        <table>
-            <caption>Мы всегда на связи</caption>
-            <tr>
-                <td>Позвоните нам по телефону</td>
-                <td>8 (912) 638-37-97</td>
-            </tr>
-            <tr>
-                <td>Напишите нам по адресу</td>
-                <td>nataliburt@gmail.com</td>
-            </tr>
-        </table>
-    </div>
-
+    <table  class="table table-striped table-hover">
+        <caption>Мы всегда на связи</caption>
+        <tbody>
+        <tr>
+            <td>Позвоните нам по телефону</td>
+            <td>8 (912) 638-37-97</td>
+        </tr>
+        <tr>
+            <td>Напишите нам по адресу</td>
+            <td>nataliburt@gmail.com</td>
+        </tr>
+        </tbody>
+    </table>
 </div>
 <!-- /.container -->
 
