--- a/views/search.html
+++ b/views/search.html
@@ -64,7 +64,7 @@
                     <div class="col-md-5">
                         <h3><a href="/item/{{item._id}}">{{item.title}}</a></h3>
                         <h4>{{item.slogan}}</h4>
-                        <p>{{item.description}}</p>
+                        <p>{{ item.description | safe }}</p>
                         <a class="btn btn-primary" href="/item/{{item._id}}">Просмотр персонажа <span class="glyphicon glyphicon-chevron-right"></span></a>
                     </div>
                 </div>
