--- a/views/home.html
+++ b/views/home.html
@@ -80,7 +80,7 @@
                     <div class="col-md-5">
                         <h3><a href="/item/{{item._id}}">{{item.title}}</a></h3>
                         <h4>{{item.slogan}}</h4>
-                        <p>{{item.description}}</p>
+                        <p>{{ item.description | safe }}</p>
                         <a class="btn btn-primary" href="/item/{{item._id}}">Подробнее<span class="glyphicon glyphicon-chevron-right"></span></a>
                     </div>
                 </div>
