--- a/views/includes/nav.html
+++ b/views/includes/nav.html
@@ -31,8 +31,7 @@
                     </div>
                     <button type="submit" class="btn btn-default">Поиск</button>
                     <a href="/requestCall">
-                        <button type="button" class="btn btn-success">
-                            <!--<span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>--> Заказать звонок
+                        <button type="button" class="btn btn-success"><span class="glyphicon glyphicon-earphone"></span> Заказать звонок
                         </button>
                     </a>
                 </form>
