--- a/views/price.html
+++ b/views/price.html
@@ -45,7 +45,73 @@
     </div>
     <!-- /.row -->
 
-
+    <table class="table table-striped table-hover">
+        <caption>Услуги костюмированного аниматора</caption>
+        <thead>
+        <tr>
+            <th>№</th>
+            <th>Наименование услуги</th>
+            <th>Цена, руб</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>1</td>
+            <td>Персонаж с развлекательной программой</td>
+            <td>1800</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>Дополнительные предложения к программе</td>
+            <td>400</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>Развлекательная программа по Вашему сценарию</td>
+            <td>+300</td>
+        </tr>
+        </tbody>
+    </table>
+    <table class="table table-striped table-hover">
+        <caption>К любому мероприятию у нас Вы можете заказать</caption>
+        <tbody>
+        <tr>
+            <td>1</td>
+            <td>Видеосъемка</td>
+            <td>1800</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>Фотосъемка</td>
+            <td>1000</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>Выезд "Живой открытки"</td>
+            <td>500</td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>Работа ростовой куклы</td>
+            <td>500</td>
+        </tr>
+        </tbody>
+    </table>
+    <table class="table table-striped table-hover">
+        <caption>Услуги декорирования места проведения мероприятия</caption>
+        <tbody>
+        <tr>
+            <td>1</td>
+            <td>Оформление тематической фотозоны</td>
+            <td>500</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>Декор помещения в стиле персонажа</td>
+            <td>750</td>
+        </tr>
+        </tbody>
+    </table>
 
 </div>
 <!-- /.container -->
