--- a/views/requestCall.html
+++ b/views/requestCall.html
@@ -35,21 +35,50 @@
 <!-- Page Content -->
 <div class="container">
 
-    <form action="/requestCall" METHOD="post">
+    <!--<form action="/requestCall" METHOD="post" class="form-horizontal">
+        <div class="form-group">
         <legend>Ввод личных данных</legend>
-        <label>Оставьте, пожалуйста, свои контактные данные, и мы Вам перезвоним</label>
-        <br>
-        <input type="text" name="name" id="name" placeholder="Имя">
-        <span class="help-block">Ваше имя</span>
-        <br>
-        <input type="text" name="phone" id="phone" placeholder="+7 (000) 000 00 00">
+        <label class="col-sm-2 control-label">Имя</label>
+        <div>
+            <input class="form-control" type="text" name="name" id="name" placeholder="Введите Ваше имя">
+        </div>
+        <input class="form-control" type="text" name="phone" id="phone" placeholder="+7 (000) 000 00 00">
         <label for="phone">Номер телефона</label>
         <br>
-        <textarea name="comment" id="comment" placeholder="Оставте ваш комментарий здесь"></textarea>
+        <textarea class="form-control" name="comment" id="comment" placeholder="Оставте ваш комментарий здесь"></textarea>
         <label for="comment">Комментарий</label>
         <br>
         <input type="submit" name="submit" value="Перезвоните мне" class="btn btn-success">
         <input type="reset" name="reset" value="Очистить" class="btn btn-warning">
+        </div>
+    </form>-->
+
+    <form class="form-horizontal" action="/requestCall" METHOD="post">
+        <legend>Заполните, пожалуйста, все поля и мы Вам обязательно перезвоним</legend>
+        <div class="form-group">
+            <label for="name" class="col-sm-2 control-label">Имя</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="name" placeholder="Введите Ваше имя" name="name">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="phone" class="col-sm-2 control-label">Номер телефона</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="phone" placeholder="+7 (000) 000 00 00" name="phone">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="name" class="col-sm-2 control-label">Вопрос или комментарий</label>
+            <div class="col-sm-10">
+                <textarea class="form-control" name="comment" id="comment" placeholder="Оставте ваш комментарий здесь" rows="3"></textarea>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <button type="submit" name="submit" value="Перезвоните мне" class="btn btn-success">Перезвоните мне</button>
+                <button type="reset" name="reset" value="Очистить" class="btn btn-warning">Очистить</button>
+            </div>
+        </div>
     </form>
 
 </div>
