--- a/views/requestCallResult.html
+++ b/views/requestCallResult.html
@@ -34,9 +34,9 @@
 
 <!-- Page Content -->
 <div class="container">
-
-    <div class="requestCallResult">Спасибо за обращение, в ближайшее время с вами свяжется администратор нашего агенства.</div>
-
+    <blockquote>
+        <p class="lead">Спасибо за обращение, в ближайшее время с вами свяжется администратор нашего агенства.</p>
+    </blockquote>
 </div>
 <!-- /.container -->
 
