--- a/views/price.html
+++ b/views/price.html
@@ -62,7 +62,7 @@
         </tr>
         <tr>
             <td>2</td>
-            <td>Дополнительные предложения к программе</td>
+            <td>Дополнительные предложения к программе <i>(за 1 наименование)</i></td>
             <td>400</td>
         </tr>
         <tr>
