--- a/views/requestCallResult.html
+++ b/views/requestCallResult.html
@@ -35,7 +35,7 @@
 <!-- Page Content -->
 <div class="container">
     <blockquote>
-        <p class="lead">Спасибо за обращение, в ближайшее время с вами свяжется администратор нашего агенства.</p>
+        <p class="lead">Спасибо за обращение, в ближайшее время с Вами свяжется администратор нашего агенства.</p>
     </blockquote>
 </div>
 <!-- /.container -->
